--- a/AR.js/AR.js/three.js/examples/mobile-performance-addfbx2copy3.html
+++ b/AR.js/AR.js/three.js/examples/mobile-performance-addfbx2copy3.html
@@ -306,6 +306,7 @@
                     .setPath( '../../data/data/' )
                     .load( 'Scan3D.obj', function ( object ) {
                         object.scale.set(.4, .4, .4);
+                        object.position.y = 0.5;
                         arWorldRoot.add( object );
                     }, onProgress, onError );
             } );
