--- a/AR.js/three.js/examples/ketchupbottle.html
+++ b/AR.js/three.js/examples/ketchupbottle.html
@@ -247,12 +247,12 @@
          // var textureLoader = new THREE.TextureLoader( manager );
          // var texture = textureLoader.load( '../../data/data/cycled-paper.jpg' );
          // obj model
-         // var onProgress = function ( xhr ) {
-         //     if ( xhr.lengthComputable ) {
-         //         var percentComplete = xhr.loaded / xhr.total * 100;
-         //         console.log( Math.round(percentComplete, 2) + '% downloaded' );
-         //     }
-         // };
+         var onProgress = function ( xhr ) {
+             if ( xhr.lengthComputable ) {
+                 var percentComplete = xhr.loaded / xhr.total * 100;
+                 console.log( Math.round(percentComplete, 2) + '% downloaded' );
+             }
+         };
          // var onError = function ( xhr ) {
          // };
          // var loader = new THREE.OBJLoader( manager );
